# se_assignment

./: .gitignore  hello.py  pyproject.toml  requirements.txt
.github/workflows/: codecov.yml
3123004223/similarity_detection/: README.md  data.py  main.py  test_main.py
