[project]
name = "se-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gensim>=4.3.2",
    "jieba>=0.42.1",
    "numpy>=1.0.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.5",
    "scikit-learn>=1.6.1",
    "scipy==1.12",
]
